// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoWindow should render InfoWindow component with props 1`] = `
<div
  className="infoWindow"
  style={
    Object {
      "background": "linear-gradient(0deg, rgba(0, 0, 0, 0.7) 100%, rgba(0, 0, 0, 0.7) 100%),
    url(https://image.tmdb.org/t/p/w500posterImg)",
      "backgroundPosition": "top",
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "cover",
    }
  }
>
  <button
    className="btn"
    data-id="info-window-btn"
    onClick={[MockFunction]}
    type="button"
  >
    ×
  </button>
  <div
    className="wrap"
  >
    <div
      className="title"
    >
      <h3
        className="titleText"
      >
        title
      </h3>
      <p
        className="titleScore"
      >
        999
      </p>
    </div>
    <p
      className="genres"
    >
      genres
    </p>
  </div>
  <p
    className="overview"
  >
    overview
  </p>
  <div
    className="btnWrap"
  >
    <Memo(ButtonWatchNowContainer)
      movieId={9}
    />
  </div>
</div>
`;

exports[`InfoWindow should render InfoWindow component without props 1`] = `
<div
  className="infoWindow"
  style={
    Object {
      "background": "url(https://www.themoviedb.org/assets/2/v4/glyphicons/basic/glyphicons-basic-38-picture-grey-c2ebdbb057f2a7614185931650f8cee23fa137b93812ccb132b9df511df1cfac.svg) 0% 0% / contain",
      "backgroundPosition": "top",
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "contain",
    }
  }
>
  <button
    className="btn"
    data-id="info-window-btn"
    onClick={[MockFunction]}
    type="button"
  >
    ×
  </button>
  <div
    className="wrap"
  >
    <div
      className="title"
    >
      <h3
        className="titleText"
      />
      <p
        className="titleScore"
      >
        0
      </p>
    </div>
    <p
      className="genres"
    />
  </div>
  <p
    className="overview"
  />
  <div
    className="btnWrap"
  >
    <Memo(ButtonWatchNowContainer)
      movieId={0}
    />
  </div>
</div>
`;
